--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
           <div class="firstDiv">
             <div class="home-div">
-              <h3><link rel="stylesheet" href="" />Home</h3>
+              <!-- <h3><link rel="stylesheet" href="" />Home</h3> -->
               <!-- <h3><link rel="stylesheet" href="" />About</h3> -->
             </div>
             
